cluster-go/infrastructure/file-server/server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    deployment.kubernetes.io/revision: '1'

  name: files-tools
  namespace: http-server
  labels:
    app: files-tools
    app.kubernetes.io/component: files-tools
    app.kubernetes.io/instance: files-tools
    app.kubernetes.io/name: files-tools
    app.openshift.io/runtime: java
    app.openshift.io/runtime-namespace: http-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: files-tools
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: files-tools
        deployment: files-tools
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      volumes:
        - name: files-tools-1
          emptyDir: {}
      containers:
        - name: files-tools
          image: 'quay.io/rh_ee_cschmitz/files-tools:latest'
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: files-tools-1
              mountPath: /tmp
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
